--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
+    "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
