--- a/.github/workflows/testgithubworkflow.yml
+++ b/.github/workflows/testgithubworkflow.yml
@@ -1,23 +1,50 @@
-name: CI 
+name: CI
 
 on:
-    pull_request :
-        branches: [ "main" ]
-    
+
+
+  pull_request:
+
+    branches: [ "main" ]
+
+
+
+
+  workflow_dispatch:
+
+
+
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-    
-    strategy: 
+
+
+  deploy:
+
+
+    runs-on: ubuntu-latest
+
+
+    strategy:
+
         matrix:
+
             node-version: [16.x]
-            
+
+
     steps:
-      - uses: actions/checkout@v3
+
+      - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
+
         uses: actions/setup-node@v1
+
         with:
+
             node-version: ${{ matrix.node-version }}
+
       - run: npm install
+
       - run: npm run build --if-present
-      - run: npm start & npm test
+
+      - run: npm test
