--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^29.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.25.2",
     "supertest": "^6.3.0"
   }
 }
