--- a/.github/workflows/packerWorkflow.yml
+++ b/.github/workflows/packerWorkflow.yml
@@ -32,22 +32,22 @@ jobs:
 
 
     steps:
+      
+      # uses: actions/checkout@v3
 
-      - uses: actions/checkout@v3
+      # - name: Use Node.js ${{ matrix.node-version }}
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v1
 
-        uses: actions/setup-node@v1
+      #   with:
 
-        with:
+      #       node-version: ${{ matrix.node-version }}
 
-            node-version: ${{ matrix.node-version }}
+      # - run: npm install
 
-      - run: npm install
+      # - run: npm run build --if-present
 
-      - run: npm run build --if-present
-
-      - run: npm test
+      # - run: npm test
       - name: AWS Configuration
         uses: aws-actions/configure-aws-credentials@v1
         with:
