--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -32,19 +32,6 @@ jobs:
 
         uses: actions/checkout@v2
 
-      - name: Configure Credentials
-
-        uses: aws-actions/configure-aws-credentials@v1
-
-        with:
-
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-          aws-region: us-east-1
-
-
       - name: Packer Init
 
         working-directory: .
@@ -61,6 +48,15 @@ jobs:
 
       - name: Start AMI
 
-        working-directory: .
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: amiFinal.pkr.hcl
+          working_directory: .
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-        run: packer build --var-file=amiFinal.pkrvars.hcl amiFinal.pkr.hcl
+
+        
