--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Validate PAcker Template
 
-        working-directory: .
+        working-directory: ./
 
         run: packer validate amiFinal.pkr.hcl
 
@@ -47,7 +47,7 @@ jobs:
           command: build
           arguments: "-color=false -on-error=abort"
           target: amiFinal.pkr.hcl
-          working_directory: .
+          working_directory: ./
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
