--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -49,8 +49,8 @@ jobs:
           target: amiFinal.pkr.hcl
           working_directory: ./
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 
         
