--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -39,6 +39,12 @@ jobs:
 
         run: packer validate amiFinal.pkr.hcl
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Start AMI
 
