added if statement
Signed-off-by: ArjunNandkishorTiwari <tiwari.ar@northeastern.edu>

--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Start AMI
 
         uses: hashicorp/packer-github-actions@master
+        if: ${{ always() }}
         with:
           command: build
           arguments: "-color=false -on-error=abort"
