--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -35,34 +35,33 @@ jobs:
 
       - name: Validate PAcker Template
 
-        working-directory: ./
+        working-directory: .
 
         run: packer validate amiFinal.pkr.hcl
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-        # env:
-        #   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-
-      # - name: Start AMI
-
-      #   uses: hashicorp/packer-github-actions@master
-      #   if: ${{ always() }}
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
       #   with:
-      #     command: build
-      #     arguments: "-color=false -on-error=abort"
-      #     target: amiFinal.pkr.hcl
-      #     working_directory: ./
-      #   env:
       #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     aws-region: us-east-1
+      #   env:
+      #     AWS_ACCESS_KEY_I: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+
+      - name: Start AMI
+
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: amiFinal.pkr.hcl
+          working_directory: .
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
 
         
