--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -16,6 +16,10 @@ jobs:
 
   packer:
 
+    env:
+      AWS-ACCESS-KEY-ID: ${{secrets.AWS_ACCESS_KEY}}
+      AWS-SECRET-ACCESS-KEY: ${{secrets.AWS_SECRET_KEY}}
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -39,16 +43,13 @@ jobs:
 
         run: packer validate amiFinal.pkr.hcl
 
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-1
-      #   env:
-      #     AWS_ACCESS_KEY_I: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+        
 
       - name: Start AMI
 
@@ -57,11 +58,5 @@ jobs:
           command: build
           arguments: "-color=false -on-error=abort"
           target: amiFinal.pkr.hcl
-          working_directory: .
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-
+ 
         
