--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -166,7 +166,7 @@ Resources:
     Type: AWS::EC2::Instance
     Properties: 
       InstanceType: t2.micro
-      DisableApiTermination: true
+      DisableApiTermination: false
       ImageId: !Ref AmiID
       KeyName: aws_mac
       SecurityGroupIds: 
