added packer validation for pull request
Signed-off-by: ArjunNandkishorTiwari <tiwari.ar@northeastern.edu>

--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -48,3 +48,9 @@ jobs:
       - run: npm run build --if-present
 
       - run: npm test
+
+
+      - name: Validate PAcker Template
+
+
+        run: packer validate amiFinal.pkr.hcl
