--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -168,6 +168,7 @@ Resources:
       InstanceType: t2.micro
       DisableApiTermination: false
       ImageId: !Ref AmiID
+   #   KeyName: aws_mac
       SecurityGroupIds: 
         - !Ref InstanceSecurityGroup
       SubnetId: !Ref PublicSubnet1
