--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^2.0.0",
+    "aws-sdk": "^2.1238.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
     "crypto": "^1.0.1",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jest": "^29.1.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.2",
