removed zip and cloud formation done till s3 ec2 and roles
Signed-off-by: ArjunNandkishorTiwari <tiwari.ar@northeastern.edu>

--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -37,6 +37,12 @@ jobs:
         uses: actions/checkout@v2
 
 
+      - name: Zip all the webapp imp files
+        run: |
+          zip -r webapp.zip ./
+          pwd ./webapp
+
+
       
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
