chnages in packer
Signed-off-by: ArjunNandkishorTiwari <tiwari.ar@northeastern.edu>

--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -49,6 +49,11 @@ jobs:
 
       - run: npm test
 
+      - name: Zip all the webapp imp files
+        run: |
+          zip -r webapp.zip ./
+          pwd ./webapp
+
 
       - name: Validate PAcker Template
 
