removed mysql and added private in S3 bucket
Signed-off-by: ArjunNandkishorTiwari <tiwari.ar@northeastern.edu>

--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -351,6 +351,7 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
+      AccessControl: Private
       BucketName: !Ref S3BucketName
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
