--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -295,18 +295,14 @@ Resources:
         Fn::Base64:
           !Sub |
           #!/bin/bash
-          cat > /etc/environment << 'EOF'
 
-            export DB_HOST=${RDSInstance.Endpoint.Address}
-            export DB_USER=${DatabaseUser}
-            export AWS_BUCKET=${S3Bucket}
-            export DB_NAME=${DatabaseName}
-            export DB_PASSWORD=${DatabasePassword}
-          EOF
-          source /etc/profile
+          echo export DB_HOST=${RDSInstance.Endpoint.Address} >> /etc/profile
+          echo export DB_USER=${DatabaseUser} >> /etc/profile
+          echo export AWS_BUCKET=${S3Bucket} >> /etc/profile
+          echo export DB_NAME=${DatabaseName} >> /etc/profile
+          echo export DB_PASSWORD=${DatabasePassword} >> /etc/profile
           echo "Done with setting environment variables"
-          sudo apt-get update -y
-          sudo pm2 reload all --update-env
+          
           
 
 
@@ -331,7 +327,7 @@ Resources:
   RDSInstance:
     Type: AWS::RDS::DBInstance
     Properties:
-      DBInstanceIdentifier : csye6225
+      DBInstanceIdentifier : csye62251
       DBInstanceClass : db.t2.micro
       DBName : !Ref DatabaseName #########
       Engine : MySql
