--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -295,16 +295,24 @@ Resources:
         Fn::Base64:
           !Sub |
           #!/bin/bash
+          cat > /etc/environment << 'EOF'
 
             export DB_HOST=${RDSInstance.Endpoint.Address}
             export DB_USER=${DatabaseUser}
             export AWS_BUCKET=${S3Bucket}
             export DB_NAME=${DatabaseName}
             export DB_PASSWORD=${DatabasePassword}
+          EOF
           source /etc/profile
           echo "Done with setting environment variables"
           sudo apt-get update -y
           sudo pm2 reload all --update-env
+          cd /home/ubuntu/webapp
+          sudo pm2 start app.js
+          sudo pm2 startup systemd
+          sudo pm2 save
+          sudo pm2 list
+          sudo pm2 status
           
 
 
