--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -399,6 +399,7 @@ Resources:
                  - s3:GetObject
                  - s3:PutObject
                  - s3:DeleteObject
+                 - s3:ListBucket
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", !Ref S3Bucket]]
                   - !Join ["", ["arn:aws:s3:::", !Ref S3Bucket, "/*"]]
