--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "sequelize": "^6.25.2",
     "supertest": "^6.3.0"
   }
