--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -299,7 +299,7 @@ Resources:
 
             export DB_HOST=${RDSInstance.Endpoint.Address}
             export DB_USER=${DatabaseUser}
-            export AWS_BUCKET=${S3Bucket}
+            export AWS_BUCKET=${S3BucketName}
             export DB_NAME=${DatabaseName}
             export DB_PASSWORD=${DatabasePassword}
           EOF
@@ -337,7 +337,7 @@ Resources:
   RDSInstance:
     Type: AWS::RDS::DBInstance
     Properties:
-      DBInstanceIdentifier : csye62251
+      DBInstanceIdentifier : csye6225
       DBInstanceClass : db.t2.micro
       DBName : !Ref DatabaseName #########
       Engine : MySql
