--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -311,8 +311,15 @@ Resources:
           echo "Done with setting environment variables"
           sudo apt-get update -y
           sudo pm2 reload all --update-env
+          sudo apt-get update -y
+          sudo apt-get install iptables-persistent -y
+          sudo systemctl enable netfilter-persistent
           sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-ports 9000
+          sudo iptables-save > /etc/iptables/rules.v4
+          sudo chmod 777 /etc/iptables/rules.v4
+          sudo iptables-save > /etc/iptables/rules.v4
           cd /home/ubuntu/webapp
+          sudo pm2 delete app
           sudo pm2 start app.js
           sudo pm2 startup systemd
           sudo pm2 save
@@ -342,7 +349,7 @@ Resources:
   RDSInstance:
     Type: AWS::RDS::DBInstance
     Properties:
-      DBInstanceIdentifier : csye6225
+      DBInstanceIdentifier : csye62251
       DBInstanceClass : db.t2.micro
       DBName : !Ref DatabaseName #########
       Engine : MySql
