--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jest": "^29.1.2",
+    "log4js": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "sequelize": "^6.25.2",
-    "supertest": "^6.3.0"
+    "statsd-client": "^0.4.7",
+    "supertest": "^6.3.0",
+    "winston": "^3.8.2",
+    "winston-cloudwatch": "^6.1.1"
   }
 }
