--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -21,9 +21,9 @@
     "metrics" : {
         "metrics_collected" : {
             "statsd" : {
-                "service_address" : "8125",
-                "metrics_collection_interval" : 15,
-                "metrics_aggregation_interval" : 300
+                "service_address" : ":8125",
+                "metrics_collection_interval" : 10,
+                "metrics_aggregation_interval" : 0
             }
         }
     }
