--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "jest": "^29.1.2",
     "log4js": "^6.7.0",
+    "lynx": "^0.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
