--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^6.25.2",
     "statsd-client": "^0.4.7",
     "supertest": "^6.3.0",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-cloudwatch": "^6.1.1"
   }
