--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -64,6 +64,11 @@ Parameters:
     Type: Number
     Default: 2
 
+  ExpirationMinute:
+    Description: Minutes for expiration of token
+    Type: Number
+    Default: 2
+
 
 
 
@@ -307,6 +312,7 @@ Resources:
             export DB_NAME=${DatabaseName}
             export DB_PASSWORD=${DatabasePassword}
             export ARN_TOPIC_SNS=${SNSTopic}
+            export TOKEN_TTL_EXPIRY=${ExpirationMinute}
           EOF
           source /etc/profile
           echo "Done with setting environment variables"
