--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -470,7 +470,7 @@ Resources:
       Handler: index.handler
       Code:
         ZipFile: |
-          console.log("in lambda function by cft");
+          console.log("in lambda function by");
 
 
 
@@ -513,7 +513,7 @@ Resources:
                           Body: {
                               Html : {
                                   Charset : "UTF-8",
-                                  Data : "Hello! Please click on the following  link to verify "+"prod.arjuntiwari.me/v1/verifyUserEmail?email="+message+"&token="+token
+                                  Data : "Hello! Please click on the following  link to verify "+"http://prod.arjuntiwari.me/v1/verifyUserEmail?email="+message+"&token="+token
                               },
                           },
                           Subject : {
