--- a/csye6225-infra.yml
+++ b/csye6225-infra.yml
@@ -470,80 +470,7 @@ Resources:
       Handler: index.handler
       Code:
         ZipFile: |
-          console.log("in lambda function by");
-
-
-
-          const aws = require('aws-sdk');
-          const region = 'us-east-1';
-
-          exports.handler = async (event, context, callback) => {
-
-              console.log("lambda function by serverless")
-
-              var message = event.Records[0].Sns.Message;
-              console.log("message ",message);
-
-              var token = event.Records[0].Sns.Subject;
-
-              var dynamoDBClient = new aws.DynamoDB({
-                  region : 'us-east-1'
-              });
-
-              //checking if email already sent
-
-              const paramsCheckAlreadySent = {
-                  TableName : 'myDynamoDBEmailTable',
-                  Key: {
-                      'Email' : {S:message},
-                  }
-              };
-
-              const dataCheck = await dynamoDBClient.getItem(paramsCheckAlreadySent).promise();
-
-              if (dataCheck.Item) {
-                  console.log("Email already sent to the user : "+ message + " Please do not send again");
-              } else{
-                  const sesClient = new aws.SES();
-                  const paramsSES = {
-                      Destination : {
-                          ToAddresses : [message],
-                      },
-                      Message:{
-                          Body: {
-                              Html : {
-                                  Charset : "UTF-8",
-                                  Data : "Hello! Please click on the following  link to verify "+"http://prod.arjuntiwari.me/v1/verifyUserEmail?email="+message+"&token="+token
-                              },
-                          },
-                          Subject : {
-                              Charset : "UTF-8",
-                              Data: `Verification for prod.arjuntiwari.me`,
-
-                          }
-                      },
-                      Source: `userverify@prod.arjuntiwari.me`
-                  };
-
-                  const dataSES = await sesClient.sendEmail(paramsSES).promise();
-                  console.log(dataSES);
-                  console.log("Email Sent !!!");
-
-                  const paramsEmailSent = {
-                      TableName : 'myDynamoDBEmailTable',
-                      Item: {
-                          'Email' : {S:message},
-                      }
-                  }
-
-                  const dataPut = await dynamoDBClient.putItem(paramsEmailSent).promise();
-
-                  console.log(dataPut)
-              }
-
-
-
-          }
+          console.log("in lambda function by cft");
 
 
       FunctionName: MailInvoke
