--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -53,11 +53,16 @@ jobs:
         
 
       - name: Start AMI
+        run: |
+              packer build --var-file=amiFinal.pkrvars.hcl amiFinal.pkr.hcl
+              AMI_ID=$(jq -r '.builds[-1].artifact_id' output.json | cut -d ":" -f2)
+              echo "AMI Id"
+              echo "$AMI_ID"
+        env:
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: build
-          arguments: "-color=false -on-error=abort"
-          target: amiFinal.pkr.hcl
- 
-        
+
+            
+
+
