--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -54,7 +54,8 @@ jobs:
 
       - name: Start AMI
         run: |
-              packer build --var-file=amiFinal.pkrvars.hcl amiFinal.pkr.hcl | AMI_ID=$(jq -r '.builds[-1].artifact_id' output.json | cut -d ":" -f2)
+              packer build --var-file=amiFinal.pkrvars.hcl amiFinal.pkr.hcl 
+              AMI_ID=$(jq -r '.builds[-1].artifact_id' output.json | cut -d ":" -f2)
               echo "AMI Id"
               echo "$AMI_ID"
         env:
