--- a/.github/workflows/amiwork.yml
+++ b/.github/workflows/amiwork.yml
@@ -55,12 +55,20 @@ jobs:
       - name: Start AMI
         run: |
               packer build --var-file=amiFinal.pkrvars.hcl amiFinal.pkr.hcl 
-              AMI_ID=$(jq -r '.builds[-1].artifact_id' output.json | cut -d ":" -f2)
-              echo "AMI Id"
-              echo "$AMI_ID"
+              
+              
+              
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+
+      - name: Get AMI Id
+        run: |
+              AMI_ID=$(jq -r '.builds[-1].artifact_id' output.json | cut -d ":" -f2)
+              echo "AMI Id"
+              echo "$AMI_ID"
+              echo "::set-output name=AMI_ID::$AMI_Id"
+
 
 
             
